added atlanta city council shapefiles

--- a/examples-and-data/GeoPython.ipynb
+++ b/examples-and-data/GeoPython.ipynb
@@ -29,7 +29,8 @@
     "from mpl_toolkits.basemap import Basemap # displaying and plotting on maps\n",
     "import matplotlib.pyplot as plt\n",
     "%pylab inline\n",
-    "from geopy.geocoders import Nominatim, GoogleV3 # for geocoding and reverse geocoding"
+    "from geopy.geocoders import Nominatim, GoogleV3 # for geocoding and reverse geocoding\n",
+    "from geopy.distance import great_circle"
    ]
   },
   {
@@ -48,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Geocoding and mapping ##\n",
+    "## Geocoding ##\n",
     "\n",
     "In geocoding, we convert location names to latitude-longitude coordinates."
    ]
@@ -79,7 +80,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's use Basemap to show the location on a map."
+    "Flint was buying water from Detroit. How far apart are they?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(u'Detroit, Wayne County, Michigan, United States of America', (42.3486635, -83.0567374))\n"
+     ]
+    }
+   ],
+   "source": [
+    "detroit_loc = nom_geo.geocode('Detroit,MI')\n",
+    "print detroit_loc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92.2050822312 km\n"
+     ]
+    }
+   ],
+   "source": [
+    "print great_circle(flint_loc[1],detroit_loc[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "People used to get ice from Fresh Pond in Cambridge, MA. Perhaps the Flintians would prefer to get their water from there."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(u'Fresh Pond, Beech Path, Strawberry Hill, Cambridge, Middlesex County, Massachusetts, 02140, United States of America', (42.384173, -71.1489033160316))\n",
+      "1029.30858035 km\n"
+     ]
+    }
+   ],
+   "source": [
+    "fresh_pond_loc = nom_geo.geocode('Fresh Pond, Cambridge, MA')\n",
+    "print fresh_pond_loc\n",
+    "print great_circle(flint_loc[1],fresh_pond_loc[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mapping ##\n",
+    "\n",
+    "Now let's use Basemap to show the location on a map.\n",
+    "\n",
+    "To do this, we'll need to decide on a map projection. XKCD provides [a helpful guide](https://xkcd.com/977/)."
    ]
   },
   {
